# pyosmo

./: .gitignore  .pylintrc  CLAUDE.md  LICENSE  Makefile  PUBLISHING.md  README.md  license_to_commit.sh  mutmut_config.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_all_versions.sh
.claude/: README.md
.claude/commands/: examples.md  lint.md  test.md
.github/workflows/: pr_check.yaml  python-publish.yml
doc/: PYTEST_PYOSMO_DISCOVERY_IMPLEMENTATION.md  api_improvements.md  architecture_improvements.md  configuration.md  configuration_api.md  development.md  documentation_improvements.md  feature_gap_analysis.md  improvement_roadmap.md  introduction.md  mbt_good_practises.md  prd_tla_plus_verification.md  prompt_tla_verification_agent.md  reporting_api.md  roadmap.md  strategic_vision_2025.md  tla_plus_investigation.md
examples/: 2_randomize_input.py  3_calculator.py  4_randomized_timing.py  calculator_test_model.py  complex_example.py  page_object_model.py  readme_example.py  reporting_example.py  split_model.py
examples/ai_web_agent/: README.md  generate_model.py  prompt_template.py  refine_model.py
examples/ai_web_agent/example_output/: todo_app_model.py
examples/offline_mbt/: .gitignore  README.md  offline_mbt.py  sut_calculator.py
examples/pytest/: calculator_test_model.py  test_calculator.py
examples/randomized_tests/: 2_randomize_input.py  3_calculator.py  4_randomized_timing.py
model-creator/: QUICKSTART.md  README.md  __init__.py  __main__.py  cli.py  crawler.py  generator.py  requirements.txt  updater.py
model-creator/examples/: example_generated_model.py
model-creator/models/: radio.py
model-creator/tests/: __init__.py  test_crawler.py  test_generator.py
pyosmo/: __init__.py  config.py  decorators.py  history.py  main.py  model.py  osmo.py  osmomodel.py  test_model.py
pyosmo/algorithm/: __init__.py  balancing.py  base.py  random.py  weighted.py
pyosmo/discovery/: __init__.py  base.py  decorator.py  naming.py  orchestrator.py
pyosmo/end_conditions/: __init__.py  base.py  endless.py  length.py  logical.py  step_coverage.py  time.py
pyosmo/error_strategy/: __init__.py  allow_count.py  always_ignore.py  always_raise.py  base.py  ignore_asserts.py
pyosmo/history/: history.py  statistics.py  test_case.py  test_step_log.py
pyosmo/models/: __init__.py  osmo_model.py  random_delay_model.py
pyosmo/plugins/: __init__.py  registry.py
pyosmo/reporting/: __init__.py  csv_reporter.py  html_reporter.py  json_reporter.py  junit_reporter.py  markdown_reporter.py
pyosmo/tests/: test_config.py  test_core.py  test_decorators.py  test_end_conditions.py  test_error_strategy.py  test_failure_strategy.py  test_fluent_config.py  test_guard_all.py  test_history.py  test_history_attachments.py  test_history_statistics.py  test_reporting.py  test_timeout.py  test_weight_algo.py
pyosmo/tests/algorithms/: test_balancing_algo.py  test_weight_algo.py
pytest_pyosmo/: ARCHITECTURE.md  README.md  __init__.py  conftest.py  pytest_pyosmo_plugin.py  setup.py  test_models_example.py
scripts/: bump_version.py  check_pypi.py  publish.py
