[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyosmo"
version = "0.2.2"
description = "pyosmo - a model-based testing tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Olli-Pekka Puolitaival", email = "oopee1@gmail.com"},
]
maintainers = [
    {name = "Olli-Pekka Puolitaival", email = "oopee1@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click",
    "mypy>=1.18.2",
    "pytest>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
pyosmo = "pyosmo.main:pyosmo_cli"

[tool.setuptools.packages.find]
include = ["pyosmo*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RET", # flake8-return
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function call in argument defaults
    "B904",   # Within an except clause, raise exceptions with raise ... from err
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["B011"] # Allow assert False
"model-creator/**/*.py" = ["N999"]  # Allow hyphenated directory name

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["pyosmo/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mutmut]
paths_to_mutate = "pyosmo/"
backup = false
runner = "python -m pytest pyosmo/tests/"
tests_dir = "pyosmo/tests/"
dict_synonyms = "Struct, NamedStruct"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "pyosmo.tests.*"
disallow_untyped_defs = false
